*SVN*

* Fixed three issues with retrying breakpoints #417 [Florian Gross]

  1. Don't screw up pages that use multiple values for the same parameter (?foo=bar&foo=qux was converted to ?foo=barqux) 
  2. Don't screw up all forms when you click the "Retry with Breakpoint" link multiple times instead of reloading 
     (This caused the parameters to be added multiple times for GET forms leading to trouble.) 
  3. Don't add ?BP-RETRY=1 multiple times

* Added that all renders and redirects now return false, so they can be used as the last line in before_filters to stop execution.

  Before:
    def authenticate
      unless @session[:authenticated]
        redirect_to :controller => "account", :action => "login"
        return false
      end
    end
  
  After:
    def authenticate
      redirect_to(:controller => "account", :action => "login") unless @session[:authenticated]
    end

* Added conditional filters #431 [Marcel]. Example:

    class JournalController < ActionController::Base
      # only require authentication if the current action is edit or delete
      before_filter :authorize, :only_on => [ :edit, :delete ]
    
      private
        def authorize
          # redirect to login unless authenticated
        end
    end

* Added Base#render_nothing as a cleaner way of doing render_text "" when you're not interested in returning anything but an empty response.

* Added the possibility of passing nil to UrlHelper#link_to to use the link itself as the name


*1.2.0* (January 4th, 2005)

* Added MemCacheStore for storing session data in Danga's MemCache system [Bob Cottrell]
  Depends on: MemCached server (http://www.danga.com/memcached/), MemCache client (http://raa.ruby-lang.org/project/memcache/)

* Added thread-safety to the DRbStore #66, #389 [Ben Stiglitz]

* Added DateHelper#select_time and DateHelper#select_second #373 [Scott Baron]
